2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* unicode.c, ptexenc/unicode.h:
	Add new functions UVS_* to support new encoding of upTeX
	to {,de}compose characters with multiple codepoints.
	* version.ac: Bump to 1.5.0/dev.
	https://github.com/texjporg/tex-jp-build/issues/46

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h:
	Add function guessing end-of-line code.
	* ptekf.c: Better treatment of end-of-line.
	* tests/ptekf-eol.test: New tests for end-of-line.
	* Makefile.am: Adjust.
	* version.ac: Bump to 1.4.6.
	https://github.com/texjporg/tex-jp-build/issues/142

2024-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptekf.1: Add command line manual.
	* ptekf.c: Tweak command line help message.
	* Makefile.am: Adjust.

2023-02-09  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev, for TL24.

2024-02-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h, kanjicnv.c, ptexenc/kanjicnv.h:
	Add to support ISO-8859 in guessing input file encodings.
	* ptekf.c: Add a new simple encoding conversion utility "ptekf"
	to analyze file encoding conversion procedure.
	* tests/ptekf-{smoke,guess,conv}.test,
	tests/enc-amb0.bib-{euc,euc-utf8,jis,sjis,sjis-utf8,utf8},
	tests/enc-amb1.bib-{euc,jis,sjis,sjis-utf8,utf8},
	tests/enc-amb2,bib_{euc,sjis}-utf8,
	tests/enc-{euc,jis,sjis}.bib-utf8,
	tests/enc-utf8{,a,b}.bib-{euc,jis,sjis,utf8}:
	New tests to guess/convert encoding.
	https://github.com/texjporg/tex-jp-build/issues/142
	* configure.ac, Makefile.am: Adjust.
	* version.ac, COPYRIGHT: Update copyright year.
	* version.ac: Bump to 1.4.5/dev.

2023-09-11  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* unicode.c (UPTEXtoUCS): if >=UCS_MAX not >UCS_MAX.

2023-02-09  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev, for TL23.

2023-01-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h: